# docker-workshop

./: .gitignore  README.md
pipeline/: .env.example  Dockerfile  docker-compose.yml  ingest_data.ipynb  ingest_data.py  pipeline.py  pyproject.toml
pipeline/homework/: README.md  insert_table.ipynb  insert_table.py
